src/components/pages/game-common/_game-common.scss
@import '../../styles/base/constants';

.color-sprint {
  --color-btn: #{$color-sprint-btn};
  --color-accent: #{$color-sprint-btn-accent};
  --color-active: #{$color-sprint-btn-active};
  --color-dark: #{$color-sprint-dark};
  --color-dark-accent: #{$color-sprint-dark-accent};
}

.color-audiocall {
  --color-btn: #{$color-button-audiocall};
  --color-accent: #{$color-button-audiocall-accent};
  --color-active: #{$color-button-audiocall-active};
  --color-dark: #{$color-game};
  --color-dark-accent: #{$color-basic};
}

.game-window {
  width: 940px;
  height: 600px;

  display: flex;
  align-items: stretch;

  box-shadow: 10px 10px $color-basic;
  border: 20px solid $color-additional;

  @media (max-width: $width-desktop) {
    max-width: 793px;
    height: 436px;
    border: 16px solid $color-additional;
  }

  @media (max-width: $width-tablet) {
    max-width: 666px;
    height: 436px;
  }

  @media (max-width: $width-mobile) {
    width: 90%;
    min-width: 400px;
    height: auto;
  }

  @media (max-width: 400px) {
    width: 100%;
    min-width: auto;
    border-left: 0;
    border-right: 0;
    box-shadow: 0 10px $color-basic;
  }

  &_audiocall {
    background: url("./assets/images/game-audiocall/background-audiogame-1.png") no-repeat left/cover;
  }

  &_sprint {
    background: url("./assets/images/game-sprint/sprint-game-bg.png") no-repeat center/cover;
  }

  &__wrapper {
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 30px;

    border: 4px solid $color-basic;

    @media (max-width: $width-desktop) {
      padding: 15px 30px 30px;
    }

    @media (max-width: $width-tablet) {
      padding: 15px;
    }

    @media (max-width: $width-mobile) {
      gap: 36px;
    }

    // @media (max-width: 400px) {
    //   border-left: 0;
    //   border-right: 0;
    // }
  }

  &__heading {
    font-family: $font-family-additional;
    @include font(normal, 700, 8rem, 100%);
    text-shadow: -4px 4px $color-additional;
    color: $color-basic;
    text-align: center;
    margin-bottom: 16px;

    @media (max-width: $width-desktop) {
      font-size: 6rem;
      margin-bottom: 14px;
    }

    @media (max-width: $width-mobile) {
      font-size: 4rem;
      margin-bottom: 11px;
    }
  }

  &__text {
    @include font(normal, 700, 3.4rem, 3.9rem);
    color: $color-basic;
    text-align: center;

    @media (max-width: $width-desktop) {
      font-size: 2.8rem;
      line-height: 3.2rem;
    }

    @media (max-width: $width-mobile) {
      font-size: 1.8rem;
      line-height: 2.1rem;
    }

    &_description {
      @media (max-width: $width-tablet) {
        font-size: 2.4rem;
        line-height: 2.8rem;
      }

      @media (max-width: $width-mobile) {
        font-size: 1.8rem;
        line-height: 2.1rem;
      }
    }
  }

  &__no-vocab-words {
    font-size: 2.2rem;
    line-height: normal;

    @media (max-width: $width-desktop) {
      font-size: 2rem;
    }

    @media (max-width: $width-mobile) {
      font-size: 1.6rem;
    }
  }

  &__note {
    @include font(normal, 400, 1.8rem, 2.1rem);
    color: $color-basic;
    text-align: center;
    margin-top: 12px;

    @media (max-width: $width-desktop) {
      margin-top: 10px;
    }

    @media (max-width: $width-tablet) {
      margin-top: 4px;
    }

    @media (max-width: $width-mobile) {
      margin-top: 13px;
    }
  }

  &__categories {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 21px;

    @media (max-width: $width-desktop) {
      gap: 13px;
    }

    @media (max-width: $width-tablet) {
      gap: 16px;
    }

    @media (max-width: $width-mobile) {
      gap: 18px;
    }

    @media (max-width: 440px) {
      width: 90%;
    }

  }

  &__buttons {
    display: flex;
    justify-content: center;
    gap: 17px;

    @media (max-width: $width-tablet) {
      gap: 11px;
    }

    @media (max-width: $width-mobile) {
      gap: 17px;
      width: 80%;
      flex-wrap: wrap;
    }
  }

  &__button {
    width: 120px;
    height: 117px;
    background-repeat: no-repeat;
    transition: 0.2s ease;
    background-size: contain;
    background-position: center;

    font-family: $font-family-additional;
    @include font(normal, 400, 5.4rem, 94%);
    color: $color-basic;
    text-align: center;

    @media (max-width: $width-desktop) {
      width: 88px;
      height: 86px;

      font-size: 4.2rem;
      line-height: 5rem;
    }

    &:hover {
      transform: rotate(-5deg) scale(1.04);
    }

    &_a1 {
      background-image: url("./assets/images/textbook/category-a1.png");
    }

    &_a2 {
      background-image: url("./assets/images/textbook/category-a2.png");
    }

    &_b1 {
      background-image: url("./assets/images/textbook/category-b1.png");
    }

    &_b2 {
      background-image: url("./assets/images/textbook/category-b2.png");
    }

    &_c1 {
      background-image: url("./assets/images/textbook/category-c1.png");
    }

    &_c2 {
      background-image: url("./assets/images/textbook/category-c2.png");
    }

  }

  &__begin {
    display: none;
    flex-direction: column;
    align-items: center;
    gap: 17px;
  }

  &__buttonBegin {
    background-color: var(--color-btn);
    border: 4px solid var(--color-dark);

    @include font(normal, 700, 2.8rem, 100%);
    color: $color-basic;

    @media (max-width: $width-mobile) {
      width: 200px;
      padding: 8px 0;

      font-size: 2rem;
      line-height: auto;
    }

    &::after {
      content: "Начать!";
    }

    &:hover {
      background-color: var(--color-accent);
    }
  
    &:active {
      background-color: var(--color-active);
    }

    &:disabled {
      background-color: $color-additional-dark;
      border-color: $color-basic;
      cursor: default;
      &::after {
        content: "Загрузка...";
      }
    }
  }
}

.active {
  .game-window {
    &__categories {
      display: none;
    }

    &__begin {
      display: flex;
    }
  }
}

.game-results {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 18px;
  align-items: center;
  justify-content: space-between;
  padding: 24px 0;

  @media (max-width: $width-mobile) {
    position: relative;
    width: 82%;
    justify-content: space-between;
    gap: 10px;
  }

  &__wrapper {
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 95%;

    @media (max-width: $width-mobile) {
      flex-direction: column;
      position: relative;
      justify-content: flex-end;
    }
  }

  &__heading {
    font-family: $font-family-additional;
    @include font(normal, 400, 4rem, 4.8rem);
    color: var(--color-dark);
    text-align: center;

    @media (max-width: $width-mobile) {
      font-size: 2.4rem;
      line-height: 2.9rem;
      width: 94%;
    }
  }

  &__mark {
    background-image: url("./assets/images/game-audiocall/results-dog.svg");
    background-repeat: no-repeat;
    background-size: 315px 367px;
    background-position: center;

    width: 320px;
    height: 367px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-basis: 42%;

    @media (max-width: $width-tablet) {
      background-size: 235px 276px;
      width: 235px;
      height: 276px;
    }

    @media (max-width: $width-mobile) {
      position: absolute;
      top: -70%;
    }
  }

  &__statistic {
    flex-basis: 50%;
    display: flex;
    flex-direction: column;
    gap: 16px;
    overflow-y: auto;
    height: 400px;
    scrollbar-width: thin;
    scrollbar-color: var(--color-accent) var(--color-btn);

    &::-webkit-scrollbar {
      width: 7px;
      background-color: var(--color-btn);
      border-radius: 4px;
    }

    &::-webkit-scrollbar-thumb {
      background-color: var(--color-accent);
      border-radius: 4px;
    }

    @media (max-width: $width-mobile) {
      height: 491px;
      flex-basis: auto;
      min-width: 100%;
    }
  }

  &__text {
    font-family: $font-family-additional;
    @include font(normal, 400, 4.6rem, 6rem);
    color: var(--color-dark-accent);
    padding-top: 10px;

    @media (max-width: $width-tablet) {
      font-size: 3.4rem;
      line-height: 4.1rem;
    }
  }

  &__buttons {
    display: flex;
    gap: 24px;

    @media (max-width: $width-mobile) {
      position: absolute;
      top: 31.5%;
      flex-direction: column;
      gap: 16px;
    }
  }

  &__button {
    width: 220px;
    padding: 10px 0;
    border: 4px solid var(--color-dark-accent);
    @include font(normal, 700, 2.4rem, 100%);
    color: $color-basic;
    transition: background-color 0.3s linear;

    @media (max-width: $width-mobile) {
      border-width: 3px;
      font-size: 1.6rem;
    }

    &:hover {
      background-color: var(--color-accent)
    }

    &:active {
      background-color: var(--color-active)
    }

    &_play-game {
      background-color: var(--color-btn);
    }

    &_textbook {
      background-color: $color-additional;
    }
  }
}

.statistic {
  display: flex;
  flex-direction: column;
  gap: 8px;

  &__items {
    display: flex;
    flex-direction: column;
    gap: 4px;
  }

  &__heading {
    font-family: $font-family-additional;
    @include font(normal, 400, 2.4rem, 2.9rem);
    color: var(--color-dark);
    text-align: center;
  }

  @media (max-width: $width-mobile) {
    gap: 5px;
  }
}

.statistic-item {
  display: flex;
  align-items: center;
  gap: 16px;

  &__text {
    @include font(normal, 400, 1.8rem, 2.1rem);
    color: $color-basic;
  }

  &__name {
    font-weight: 700;
  }

  &__button {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 24px;
    height: 24px;
    border-radius: 50%;
    background-color: var(--color-btn);
    transition: all 0.2s;

    &>.btn-listen__img {
      width: 14px;
      filter: $filter-sprint-dark-accent;
    }

    &:hover {
      background-color: var(--color-accent);
      cursor: pointer;
    }

    &.active {
      background-color: var(--color-dark);

      &>.btn-listen__img {
        filter: invert(100%);
      }
    }
  }
}

